[MOSIP-552] Reg Proc properties corrected.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-mz.properties
@@ -322,7 +322,7 @@ mosip.registration.onboarduser_ida_auth=N
 mosip.id.validation.identity.CNIENumber=^([0-9]{10,30})$
 
 #Application ID of the Registration Client required for Authentication Web-Service. Should not be modified.
-mosip.registration.app.id =REGISTRATIONCLIENT
+mosip.registration.app.id=registrationclient
 
 #----Properties required for Kernel's Auth-Service Component----
 
