--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
@@ -132,7 +132,7 @@ DEVICEVALIDATEHISTORY=${MASTER}/deviceprovidermanagement/validate/history
 #ID Repository Services
 IDREPOSITORY=${mosip.base.url}/idrepository/v1/identity/
 IDREPOGETIDBYUIN=${mosip.base.url}/idrepository/v1/identity/uin
-UINGENERATOR=${mosip.base.url}/v1/uingenerator/uin
+UINGENERATOR=http://kernel-idgenerator-service/v1/idgenerator/uin
 RETRIEVEIDENTITYFROMRID=${mosip.base.url}/idrepository/v1/identity/rid
 RETRIEVEIDENTITY=${mosip.base.url}/idrepository/v1/identity/uin
 CREATEVID=${mosip.base.url}/idrepository/v1/vid
