--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -129,14 +129,14 @@ DEVICEVALIDATEHISTORY=${MASTER}/deviceprovidermanagement/validate/history
 #ID Repository Services
 IDREPOSITORY=${mosip.base.url}/idrepository/v1/identity/
 IDREPOGETIDBYUIN=${mosip.base.url}/idrepository/v1/identity/uin
-UINGENERATOR=${mosip.base.url}/v1/uingenerator/uin
+UINGENERATOR=http://kernel-idgenerator-service/v1/idgenerator/uin
 RETRIEVEIDENTITYFROMRID=${mosip.base.url}/idrepository/v1/identity/rid
 RETRIEVEIDENTITY=${mosip.base.url}/idrepository/v1/identity/uin
 CREATEVID=${mosip.base.url}/idrepository/v1/vid
 GETUINBYVID=${mosip.base.url}/idrepository/v1/vid
 
 #BioDedupe Services
-BIODEDUPE=http://regproc-bio-dedupe-service/v1/bio-dedupe/biometricfile
+BIODEDUPE=http://regproc-bio-dedupe-service/registrationprocessor/v1/bio-dedupe/biometricfile
 
 #ABIS services
 BIODEDUPEINSERT=${mosip.base.url}/abis/v0.1/registration-processor/abis/insert
@@ -148,7 +148,7 @@ ENCRYPTIONSERVICE=http://kernel-keymanager-service/v1/keymanager/publickey
 PDFSIGN=http://kernel-keymanager-service/v1/keymanager/pdf/sign
 
 #Digital Signature Service
-DIGITALSIGNATURE=http://kernel-keymanager-service/v1/signature/sign
+DIGITALSIGNATURE=http://kernel-keymanager-service/v1/keymanager/sign
 
 #Digital Signature Id
 mosip.registration.processor.digital.signature.id=io.mosip.registration.processor
@@ -173,6 +173,9 @@ PACKETRECEIVER=http://dmzworker0:30080/registrationprocessor/v1/packetreceiver/r
 #SMS and EMAIL notification services
 SMSNOTIFIER=http://kernel-notification-service/v1/notifier/sms/send
 EMAILNOTIFIER=http://kernel-notification-service/v1/notifier/email/send
+
+#To get the idschema from masterdata db
+IDSCHEMA=http://kernel-syncdata-service/v1/syncdata/latestidschema
 
 #---------Registration Status---------
 
