--- a/deployment/sandbox-v2/helm/charts/hadoop/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/hadoop/values.yaml
@@ -18,9 +18,9 @@ hdfs:
     resources:
       requests:
         memory: "256Mi"
-        cpu: "100m"
+        cpu: "10m"
       limits:
-        memory: "1048Mi"
+        memory: "2048Mi"
         cpu: "1000m"
 
   dataNode:
@@ -31,9 +31,9 @@ hdfs:
     resources:
       requests:
         memory: "256Mi"
-        cpu: "100m"
+        cpu: "10m"
       limits:
-        memory: "1048Mi"
+        memory: "2048Mi"
         cpu: "1000m"
 
   webhdfs:
@@ -46,16 +46,16 @@ yarn:
     resources:
       requests:
         memory: "256Mi"
-        cpu: "100m"
+        cpu: "10m"
       limits:
-        memory: "1048Mi"
+        memory: "2048Mi"
         cpu: "2000m"
 
   nodeManager:
     pdbMinAvailable: 1
 
     # The number of YARN NodeManager instances.
-    replicas: 1 
+    replicas: 1
 
     # Create statefulsets in parallel (K8S 1.7+)
     parallelCreate: false
@@ -64,28 +64,21 @@ yarn:
     # This should be tuned to fit your workload.
     resources:
       requests:
-        memory: "1048Mi"
+        memory: "2048Mi"
         cpu: "1000m"
       limits:
-        memory: "1048Mi"
+        memory: "2048Mi"
         cpu: "1000m"
 
 persistence:
-  storageClass: hdfs-local-storage
   nameNode:
-    enabled: false
+    enabled: true
     storageClass: "hdfs-nn-local-storage"
-    pvName: hdfs-nn-pv 
-    pvcName: hdfs-nn-pvc
-    hostStoragePath: /mnt/mosip_data/hdfs/nn
     accessMode: ReadWriteOnce
-    size: 6Gi
+    size: 5Gi
 
   dataNode:
-    enabled: false
+    enabled: true
     storageClass: "hdfs-dn-local-storage"
-    hostStoragePath: /mnt/mosip_data/hdfs/dn
-    pvName: hdfs-dn-pv 
-    pvcName: hdfs-dn-pvc
     accessMode: ReadWriteOnce
-    size: 6Gi
+    size: 5Gi
