--- a/deployment/sandbox-v2/playbooks/softhsm.yml
+++ b/deployment/sandbox-v2/playbooks/softhsm.yml
@@ -2,20 +2,18 @@
 #
 # Prepare folders on remote node
 - hosts: '{{persistence_node}}'
-  gather_facts: true
   roles:
     - {role: softhsm-prep}
 
 # Convert helm template to helm values 
 - hosts: console
   tasks:
-    - name: Conver helm template
+    - name: Convert helm template
       template:
         src: '{{install_root}}/roles/softhsm-prep/templates/helm_values.yml.j2'
         dest: '{{tmp_dir}}/softhsm_{{hsm_prop.label}}_helm_values.yml'
 
 - hosts: console
-  gather_facts: true
   vars:   
     kube_config: '{{mz_kube_config}}' 
     helm_chart: '{{charts_root}}/softhsm'
