--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
@@ -223,6 +223,11 @@ uin_database_username=kerneluser
 uin_database_password=Mosip@dev123
 hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
+#Database mappings id
+id_database_url=jdbc:postgresql://${mosip.kernel.database.hostname}:${mosip.kernel.database.port}/mosip_kernel
+id_database_username=kerneluser
+id_database_password=Mosip@dev123
+
 #Database mappings vid
 vid_database_url=jdbc:postgresql://${mosip.kernel.database.hostname}:${mosip.kernel.database.port}/mosip_kernel
 vid_database_username=kerneluser
