Kernel Id generator properties added.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
@@ -33,10 +33,10 @@ mosip.kernel.sms.sender=MOSMSG
 mosip.kernel.sms.unicode=1
 
 # -- Email notification -------
-mosip.kernel.notification.email.from={{ site.smtp.email_from }}
-spring.mail.host={{ site.smtp.host }}
-spring.mail.username={{ site.smtp.username }}
-spring.mail.password={{ site.smtp.password }}
+mosip.kernel.notification.email.from=mosiptestuser@gmail.com
+spring.mail.host=smtp.sendgrid.net
+spring.mail.username=apikey
+spring.mail.password=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
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -352,3 +352,19 @@ mosip.kernel.prereg.secret.key=abc123
 
 # Id of INDIVIDUAL role in PreRegistration Realm
 mosip.admin.individual_role_id=1515b7b7-46b8-4b1b-b35b-e544331f07ac
+
+
+# TODO: Confirm these
+kernel.uin.transfer-scheduler-type=cron
+#schedular seconds configuration
+kernel.uin.transfer-scheduler-seconds=0
+#schedular minutes configuration
+kernel.uin.transfer-scheduler-minutes=48
+#schedular hours configuration
+kernel.uin.transfer-scheduler-hours=17
+#schedular days configuration
+kernel.uin.transfer-scheduler-days_of_month=*
+#schedular months configuration
+kernel.uin.transfer-scheduler-months=*
+#schedular weeks configuration
+kernel.uin.transfer-scheduler-days_of_week=*
