--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
@@ -357,9 +357,9 @@ mosip.preregistration.document.id.upload=mosip.pre-registration.document.upload
 
 
 #-------------------captcha---------------
-google.recaptcha.site.key={{ site.captcha.google_recaptcha_site_key }}  
+google.recaptcha.site.key=6LcYufkUAAAAAGLHAJOeS2fuH2edB_yOjmsLVUg-  
 google.recaptcha.verify.url=https://www.google.com/recaptcha/api/siteverify
-google.recaptcha.secret.key={{ site.captcha.google_recaptcha_secret_key }}
+google.recaptcha.secret.key=6LcYufkUAAAAAG6jC1ZodRTp9aieVBj6XKy-n0LA
 mosip.preregistration.captcha.id.validate = mosip.pre-registration.captcha.id.validate
 
 #Id-scheme-json-file
