[MOSIP-1803] Config map url corrected.

--- a/deployment/sandbox-v2/helm/charts/admin/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/values.yaml
@@ -26,6 +26,6 @@ services:
     dockerTag: 1.0.10
     containerPort: 80
     servicePort: 80
-    configName: amdin-ui-config # ConfigMap name
+    configName: admin-ui-config # ConfigMap name
     apiHost: https://{{ .Values.sandboxDomainName }}/
     ingressPath: /admin-ui
