--- a/deployment/sandbox-v2/helm/charts/admin/templates/ui-configmap.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/templates/ui-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  config.json: '{"BASE_URL":"{{ tpl .Values.services.ui.apiHost . }}",  "ADMIN_URL" : "/admin/v1/"}'
+  config.json: '{"BASE_URL":"{{ tpl .Values.services.ui.apiHost . }}",  "ADMIN_URL" : "/v1/admin/"}'
 kind: ConfigMap
 metadata:
   name: {{ .Values.services.ui.configName }}
