Property corrections for reg processor.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
@@ -15,6 +15,7 @@ mosip.kernel.syncdata.registration-center-config-file=registration-${spring.prof
 # Name of the file that is present in the config server which has global config.
 mosip.kernel.syncdata.global-config-file=application-${spring.profiles.active}.properties
 mosip.kernel.syncdata.syncjob-base-url=http://kernel-syncjob-service:8099/v1/syncjob/syncjobdef
+mosip.kernel.syncdata-service-idschema-url=http://kernel-masterdata-service/v1/masterdata/idschema/latest
 
 
 #------------------------------------sms notification service-------------------------------
@@ -133,8 +134,6 @@ mosip.kernel.vid.time-to-renew-after-expiry=5
 #for genaration on init vids timeout 
 mosip.kernel.vid.pool-population-timeout=10000000
 
-
-
 kernel.vid.revoke-scheduler-type=cron
 #schedular seconds configuration
 kernel.vid.revoke-scheduler-seconds=0
@@ -158,23 +157,16 @@ mosip.kernel.prid.prids-to-generate=2000
 #for genaration on init prids timeout 
 mosip.kernel.prid.pool-population-timeout=10000000
 
-
 mosip.kernel.prid.sequence-limit=3
 kernel.prid.revoke-scheduler-type=cron
-#schedular seconds configuration
+
+# Schedular config
 kernel.prid.revoke-scheduler-seconds=0
-#schedular minutes configuration
 kernel.prid.revoke-scheduler-minutes=0
-#schedular hours configuration
 kernel.prid.revoke-scheduler-hours=23
-#schedular days configuration
 kernel.prid.revoke-scheduler-days_of_month=*
-#schedular months configuration
 kernel.prid.revoke-scheduler-months=*
-#schedular weeks configuration
 kernel.prid.revoke-scheduler-days_of_week=*
-
-
 
 #------------------------DataBase Properties-----------------------------------------
 javax.persistence.jdbc.driver=org.postgresql.Driver
@@ -353,17 +345,11 @@ mosip.kernel.prereg.secret.key=abc123
 # Id of INDIVIDUAL role in PreRegistration Realm
 mosip.admin.individual_role_id=1515b7b7-46b8-4b1b-b35b-e544331f07ac
 
-
+# UIN Schedular config
 kernel.uin.transfer-scheduler-type=cron
-#schedular seconds configuration
 kernel.uin.transfer-scheduler-seconds=0
-#schedular minutes configuration
 kernel.uin.transfer-scheduler-minutes=48
-#schedular hours configuration
 kernel.uin.transfer-scheduler-hours=17
-#schedular days configuration
 kernel.uin.transfer-scheduler-days_of_month=*
-#schedular months configuration
 kernel.uin.transfer-scheduler-months=*
-#schedular weeks configuration
 kernel.uin.transfer-scheduler-days_of_week=*
