--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-dmz.properties
@@ -151,13 +151,13 @@ ENCRYPTIONSERVICE=http://kernel-keymanager-service/v1/keymanager/publickey
 PDFSIGN=${mosip.base.url}/v1/keymanager/pdf/sign
 
 #Digital Signature Service
-DIGITALSIGNATURE=${mz.ingress.url}/v1/signature/sign
+DIGITALSIGNATURE=${mz.ingress.url}/v1/keymanager/sign
 
 #Digital Signature Id
 mosip.registration.processor.digital.signature.id=io.mosip.registration.processor
 
 #--------Registration Processor Rest Client API's-----------
-DMZCRYPTOMANAGERDECRYPT=${mz.ingress.url}/v1/keymanager/decrypt
+CRYPTOMANAGERDECRYPT=${mz.ingress.url}/v1/keymanager/decrypt
 
 #External Service
 EISERVICE=${mosip.base.url}/registrationprocessor/v1/eis/registration-processor/external-integration-service/v1.0
