--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-mz.properties
@@ -157,7 +157,7 @@ mosip.registration.processor.digital.signature.id=io.mosip.registration.processo
 NGINXDMZURL=http://dmzworker0:30080/registrationprocessor/v1/dmzpacketserver
 
 #--------Registration Processor Rest Client API's-----------
-DMZCRYPTOMANAGERDECRYPT=http://kernel-keymanager-service/v1/keymanager/decrypt
+CRYPTOMANAGERDECRYPT=http://kernel-keymanager-service/v1/keymanager/decrypt
 
 #External Service
 EISERVICE=${mosip.base.url}/registrationprocessor/v1/eis/registration-processor/external-integration-service/v1.0
@@ -309,19 +309,14 @@ registration.processor.queue.printpostaladdress = postal-service-qa
 #------------Packet Validator Stage-----------
 #Attributes to be validated in master data validation
 registration.processor.masterdata.validation.attributes = gender,region,province,city
-#Schema validation based on the true/false to validate schema
-registration.processor.validateSchema=true
-#File validation based on the true/false to validate file
+#TODO: Enable it later
+registration.processor.validateSchema=false
 registration.processor.validateFile=true
-#Checksum validation based on the true/false
 registration.processor.validateChecksum=true
-#Applicant document validation based on the true/false
 registration.processor.validateApplicantDocument=false
-#Master data validation based on the true/false
 registration.processor.validateMasterData=false
-#Mandatory fields validation for the mapping json
 registration-processor.validatemandotary=false
-#Mapping json for document validation
+
 registration.processor.document.category=idobject-document-category-mapping.json
 registration.processor.applicant.type=applicanttype-document-mapping.json
 
