--- a/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/kernel-mz.properties
@@ -34,22 +34,18 @@ mosip.kernel.sms.sender=MOSMSG
 mosip.kernel.sms.unicode=1
 
 # -- Email notification -------
-mosip.kernel.notification.email.from=mosiptestuser@gmail.com
-spring.mail.host=smtp.sendgrid.net
-spring.mail.username=apikey
-spring.mail.password=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
+mosip.kernel.notification.email.from={{ site.smtp.email_from }}
+spring.mail.host={{ site.smtp.host }}
+spring.mail.username={{ site.smtp.username }}
+spring.mail.password={{ site.smtp.password }}
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.debug=false
-# MULTIPART (Multipart-Properties)
-# Enable multipart uploads
 spring.servlet.multipart.enabled=true
-# Max file size.
 spring.servlet.multipart.max-file-size=5MB
-
 
 #--------------------------------------Keymanager  Service--------------------------------------
 #Path of config file
