--- a/deployment/sandbox-v2/roles/config-repo/files/properties/prereg2.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/prereg2.properties
@@ -23,7 +23,7 @@ preregistration.preid.regex=[0-9]+
 
 # Demographic service
 demographic.service.version=v1
-demographic.service.env=http://prereg-demographic-service
+demographic.service.env=http://pre-registration-demographic-service
 demographic.service.contextpath=preregistration/${demographic.service.version}
 demographic.resource.url=${demographic.service.env}/${demographic.service.contextpath}
 mosip.preregistration.demographic.create.id=mosip.pre-registration.demographic.create
@@ -38,20 +38,26 @@ mosip.pregistration.pagesize=20
 
 # Document service
 document.service.version=v1
-document.service.env=http://prereg-document-service
+document.service.env=http://pre-registration-document-service
 document.service.contextpath=preregistration/${document.service.version}
 document.resource.url=${document.service.env}/${document.service.contextpath}
 
 #Booking service 
 booking.service.version=v1
-booking.service.env=http://prereg-booking-service
+booking.service.env=http://pre-registration-booking-service
 booking.service.contextpath=preregistration/${booking.service.version}
 booking.resource.url=${booking.service.env}/${booking.service.contextpath}
 appointmentResourse.url=${booking.resource.url}
 
+# Batch job
+batch.service.version=v1
+batch.service.env=http://pre-registration-batchjob-service
+batch.service.contextpath=preregistration/${batch.service.version}/batch
+batch.resource.url=${batch.service.env}/${batch.service.contextpath}
+
 #Notification service
 notification.service.version=v1
-notification.service.env=http://prereg-notification-service
+notification.service.env=http://pre-registration-notification-service
 notification.service.contextpath=preregistration/${notification.service.version}
 
 # Masterdata service
@@ -159,23 +165,44 @@ preregistration.country.specific.zoneId=GMT+05:30
 
 notification.url=${notification.service.env}/${notification.service.version}/${notification.service.contextpath}/notification
 
+
+#id for synching availability data
 mosip.preregistration.booking.availability.sync.id=mosip.pre-registration.appointment.availability.sync
+#id for appointment booking
 mosip.preregistration.booking.book.id=mosip.pre-registration.booking.book
+#id for fetching appointment details
 mosip.preregistration.booking.fetch.booking.id=mosip.pre-registration.appointment.fetch
+#id for appointment cancellation
 mosip.preregistration.booking.cancel.id=mosip.pre-registration.appointment.cancel
+#id for appointment deletion
 mosip.preregistration.booking.delete.id=mosip.preregistration.booking.delete
+#id for fetching availability days for registration center id
 mosip.preregistration.booking.fetch.availability.id=mosip.pre-registration.appointment.availability
+#id for fetching booked preregistration ids for the date range
 mosip.preregistration.booking.fetchPreidByDate.id=mosip.pre-registration.appointment.ids
+#id for updating availability
 mosip.preregistration.booking.availability.increase.id=mosip.preregistration.booking.availability.increase
+#id for checking the availability
 mosip.preregistration.booking.availability.check.id=mosip.preregistration.booking.availability.check
+#id for deleting old bookings
 mosip.preregistration.booking.delete.old.id=mosip.preregistration.booking.delete.old
+#id for parse exception in booking
 mosip.preregistration.booking.exception.id=mosip.preregistration.booking.parse.exception
 
 # ----------- BatchJob--------
+
+# Determines application id for batch job authenticaion
 mosip.batch.token.authmanager.appId=prereg
+
+# Determines user name for batch job authenticaion
 mosip.batch.token.authmanager.userName=mosip-prereg-client
+
+# Determines password for batch job authenticaion
 mosip.batch.token.authmanager.password=abc123
+
+# Determines URL for batch job authenticaion
 mosip.batch.token.authmanager.url=${kernel.auth.env}/${masterdata.service.version}/${kernel.auth.contextpath}/authenticate/clientidsecretkey
+
 mosip.batch.token.request.id=
 
 # Determines the Time of the day, batch job should be intiated
@@ -185,6 +212,7 @@ preregistration.job.schedule.cron.expiredStatusJob=0 0 0 * * ?
 
 #Schema name for batch job table
 spring.batch.tablePrefix=PREREG.BATCH_
+
 
 #Booking service URL for creating time slots
 bookingAvailablity.url=${booking.resource.url}/appointment/availability/sync
@@ -198,9 +226,11 @@ expiredStatus.url=${batch.resource.url}/expiredStatus
 batch.appointment.cancel=${batch.service.env}/preregistration/v1
 
 # ----------- BatchJob-Service--------
+
 # Determines request & response id of batchjob-service
 mosip.preregistration.batchjob.service.consumed.id=mosip.pre-registration.batchjob.service.consumed
 mosip.preregistration.batchjob.service.expired.id=mosip.pre-registration.batchjob.service.expired
+
 
 # ------------- core ----------------
 
@@ -218,6 +248,9 @@ emailResourse.url=${email.service.env}/${masterdata.service.version}/${email.ser
 
 #Kernel service URL for sending sms 
 smsResourse.url=${sms.service.env}/${masterdata.service.version}/${sms.service.contextpath}/sms/send
+
+
+
 
 #-------Notification-----------
 # Email template
@@ -322,11 +355,13 @@ mosip.pre-registration.notification.id.send=mosip.pre-registration.notification.
 mosip.pre-registration.qrcode.id.generate=mosip.pre-registration.qrcode.generate
 mosip.preregistration.document.id.upload=mosip.pre-registration.document.upload
 
+
 #-------------------captcha---------------
-google.recaptcha.site.key={{ site.captcha.google_recaptcha_site_key }}  
+google.recaptcha.site.key=6LcYufkUAAAAAGLHAJOeS2fuH2edB_yOjmsLVUg-  
 google.recaptcha.verify.url=https://www.google.com/recaptcha/api/siteverify
-google.recaptcha.secret.key={{ site.captcha.google_recaptcha_secret_key }}
+google.recaptcha.secret.key=6LcYufkUAAAAAG6jC1ZodRTp9aieVBj6XKy-n0LA
 mosip.preregistration.captcha.id.validate = mosip.pre-registration.captcha.id.validate
 
 #Id-scheme-json-file
 preregistration.demographic.idschema-json-filename=pre-registration-demographic.json
+
