--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
@@ -49,6 +49,12 @@ booking.service.contextpath=preregistration/${booking.service.version}
 booking.resource.url=${booking.service.env}/${booking.service.contextpath}
 appointmentResourse.url=${booking.resource.url}
 
+# Batch job
+batch.service.version=v1
+batch.service.env=http://prereg-batchjob-service
+batch.service.contextpath=preregistration/${batch.service.version}/batch
+batch.resource.url=${batch.service.env}/${batch.service.contextpath}
+
 #Notification service
 notification.service.version=v1
 notification.service.env=http://prereg-notification-service
