User added in Keycloak for regproc testing.

--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -15,33 +15,33 @@ keycloak_mosip_clients:
 
 keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any client)
   - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OFFICER'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'ID_AUTHENTICATION'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'DEVICE_PROVIDER'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'SUPERADMIN'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'ZONAL_ADMIN'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'GLOBAL_ADMIN'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'RESIDENT'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_PROCESSOR'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'ZONAL_APPROVER'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OFFICER'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OPERATOR'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'AUTH'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'CENTRAL_APPROVER'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'MISP'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'CENTRAL_ADMIN'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'PREREG'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'PRE_REGISTRATION_ADMIN'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'PRE_REGISTRATION'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_ADMIN'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_SUPERVISOR'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'INDIVIDUAL'}  # TODO: later this role should not be needed in mosip realm
-#  - {realm_id: 'mosip', client_id: '', role_name: 'PARTNERMANAGER'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'PARTNERS'}
-#  - {realm_id: 'mosip', client_id: '', role_name: 'POLICYMANAGER'}
-#  - {realm_id: 'preregistration', client_id: '', role_name: 'INDIVIDUAL'}
-#  - {realm_id: 'preregistration', client_id: '', role_name: 'AUTH'}
-#  - {realm_id: 'preregistration', client_id: '', role_name: 'PRE_REGISTRATION_ADMIN'}
-#  - {realm_id: 'preregistration', client_id: '', role_name: 'PREREG'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'ID_AUTHENTICATION'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'DEVICE_PROVIDER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'SUPERADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'ZONAL_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'GLOBAL_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'RESIDENT'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_PROCESSOR'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'ZONAL_APPROVER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OFFICER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OPERATOR'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'AUTH'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'CENTRAL_APPROVER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'MISP'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'CENTRAL_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'PREREG'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'PRE_REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'PRE_REGISTRATION'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_SUPERVISOR'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'INDIVIDUAL'}  # TODO: later this role should not be needed in mosip realm
+  - {realm_id: 'mosip', client_id: '', role_name: 'PARTNERMANAGER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'PARTNERS'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'POLICYMANAGER'}
+  - {realm_id: 'preregistration', client_id: '', role_name: 'INDIVIDUAL'}
+  - {realm_id: 'preregistration', client_id: '', role_name: 'AUTH'}
+  - {realm_id: 'preregistration', client_id: '', role_name: 'PRE_REGISTRATION_ADMIN'}
+  - {realm_id: 'preregistration', client_id: '', role_name: 'PREREG'}
 
 keycloak_mosip_users: # Assumption "username.json" exists with same username inside 
   - {realm_id: 'mosip', user_file: 'users/testuser.json'}
@@ -165,6 +165,11 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: 'test_admin', role_name: 'REGISTRATION_SUPERVISOR'}
 
   - {realm_id: 'mosip', username: 'zonal-approver', role_name: 'ZONAL_APPROVER'}
+
+  - {realm_id: 'mosip', username: '110014', role_name: 'GLOBAL_ADMIN'}
+  - {realm_id: 'mosip', username: '110014', role_name: 'REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', username: '110014', role_name: 'REGISTRATION_OFFICER'}
+  - {realm_id: 'mosip', username: '110014', role_name: 'REGISTRATION_SUPERVISOR'}
 
     # For service account mappings client name must be prefixed with service-account-
   - {realm_id: 'mosip', username: 'service-account-mosip-prereg-client', role_name: 'INDIVIDUAL'}
