--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -62,6 +62,7 @@ keycloak_mosip_users: # Assumption "username.json" exists with same username ins
   - {realm_id: 'mosip', user_file: 'users/test_admin.json'}
   - {realm_id: 'mosip', user_file: 'users/zonal-approver.json'}
   - {realm_id: 'mosip', user_file: 'users/110014.json'}
+  - {realm_id: 'mosip', user_file: 'users/110024.json'}
 
 keycloak_mosip_user_role_map:  
   # testuser
@@ -175,6 +176,11 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: '110014', role_name: 'REGISTRATION_ADMIN'}
   - {realm_id: 'mosip', username: '110014', role_name: 'REGISTRATION_OFFICER'}
   - {realm_id: 'mosip', username: '110014', role_name: 'REGISTRATION_SUPERVISOR'}
+
+  - {realm_id: 'mosip', username: '110024', role_name: 'GLOBAL_ADMIN'}
+  - {realm_id: 'mosip', username: '110024', role_name: 'REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', username: '110024', role_name: 'REGISTRATION_OFFICER'}
+  - {realm_id: 'mosip', username: '110024', role_name: 'REGISTRATION_SUPERVISOR'}
 
     # For service account mappings client name must be prefixed with service-account-
   - {realm_id: 'mosip', username: 'service-account-mosip-prereg-client', role_name: 'INDIVIDUAL'}
