Reg Client properties crontab udpated.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-mz.properties
@@ -214,7 +214,7 @@ mosip.registration.max_age=150
 mosip.registration.face_recapture_time=5
 
 #CRON value for scheduling the Jobs
-mosip.registration.sync_data_freq=* * * ? * *
+mosip.registration.sync_data_freq=* 0/10 * * *
 
 #File Storage Location to store the downloaded Pre-Registration Packets in local system
 mosip.registration.registration_pre_reg_packet_location=..//PreRegPacketStore
