--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -40,7 +40,7 @@ keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any cli
   - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_SUPERVISOR'}
   - {realm_id: 'mosip', client_id: '', role_name: 'INDIVIDUAL'}  # TODO: later this role should not be needed in mosip realm
   - {realm_id: 'mosip', client_id: '', role_name: 'PARTNERMANAGER'}
-  - {realm_id: 'mosip', client_id: '', role_name: 'PARTNERS'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'PARTNER'}
   - {realm_id: 'mosip', client_id: '', role_name: 'POLICYMANAGER'}
   - {realm_id: 'preregistration', client_id: '', role_name: 'INDIVIDUAL'}
   - {realm_id: 'preregistration', client_id: '', role_name: 'AUTH'}
@@ -156,6 +156,10 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: '110123', role_name: 'REGISTRATION_SUPERVISOR'}
 
   - {realm_id: 'mosip', username: '110124', role_name: 'REGISTRATION_OFFICER'}
+  - {realm_id: 'mosip', username: '110124', role_name: 'PARTNER'}
+  - {realm_id: 'mosip', username: '110124', role_name: 'MISP'}
+  - {realm_id: 'mosip', username: '110124', role_name: 'POLICYMANAGER'}
+  - {realm_id: 'mosip', username: '110124', role_name: 'PARTNERMANAGER'}
 
   - {realm_id: 'mosip', username: '110125', role_name: 'REGISTRATION_OFFICER'}
 
