turning off livenessProbe

--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
@@ -51,12 +51,12 @@ spec:
             port: {{ .Values.services.receiver.ports.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.receiver.healthUrl }} 
-            port: {{ .Values.services.receiver.ports.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
+ #       livenessProbe:
+ #         httpGet:
+ #           path: {{ .Values.services.receiver.healthUrl }} 
+ #           port: {{ .Values.services.receiver.ports.containerPort }} 
+ #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+ #         periodSeconds: {{ .Values.probe.period }} 
         volumeMounts:
         - name: landing-zone
           mountPath: {{ .Values.landing.path }}
