switched off livenessProbe

--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/identity-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/identity-dep.yaml
@@ -46,12 +46,12 @@ spec:
             port: {{ .Values.services.identity.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.identity.healthUrl }} 
-            port: {{ .Values.services.identity.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }}
+ #       livenessProbe:
+ #         httpGet:
+ #           path: {{ .Values.services.identity.healthUrl }} 
+ #           port: {{ .Values.services.identity.containerPort }} 
+ #         initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+ #         periodSeconds: {{ .Values.probe.period }}
         readinessProbe:
           tcpSocket:
             port: {{ .Values.services.identity.containerPort }}
