turned down liveliness probe

--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/vid-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/vid-dep.yaml
@@ -46,9 +46,9 @@ spec:
             port: {{ .Values.services.vid.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.vid.healthUrl }} 
-            port: {{ .Values.services.vid.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }}
+  #      livenessProbe:
+  #        httpGet:
+  #          path: {{ .Values.services.vid.healthUrl }} 
+  #          port: {{ .Values.services.vid.containerPort }} 
+  #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+  #        periodSeconds: {{ .Values.probe.period }}
