[MOSIP-750] Properties updated.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
@@ -91,6 +91,8 @@ ida.mapping.property.source=url:${mosip.ida.mapping.json-uri}
 
 #-------Proxy Bio SDK Integration ------------------------
 
+ida.bio.sdk.integrator=io.mosip.authentication.common.service.impl.bioauth.BioMatcherIntegratorV1
+
 ida.fingerprint.provider=io.mosip.kernel.bioapi.impl.BioApiImpl
 
 ida.face.provider=io.mosip.kernel.bioapi.impl.BioApiImpl
