turning down livenessProbe

--- a/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
@@ -49,9 +49,9 @@ spec:
             port: {{ .Values.services.key.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.key.healthUrl }} 
-            port: {{ .Values.services.key.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }}
+#        livenessProbe:
+#          httpGet:
+#            path: {{ .Values.services.key.healthUrl }} 
+#            port: {{ .Values.services.key.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }}
